--- a/css/style_css_2.css
+++ b/css/style_css_2.css
@@ -99,12 +99,29 @@ letter-spacing: 0.1em;
 .container_yaziki {
     width: 100%;
     max-width: 1510px;
-    background-color: yellow;
+    height: 200px;
+    background-color: white;
 }
-a {
+.text_yaziki {
+    position: absolute;
+    font-family: 'Ubuntu', sans-serif;
+font-style: normal;
+font-weight: normal;
+line-height: normal;
+font-size: 24px;
+text-transform: uppercase;
+left: 150px;
+color: #000000;
+}
+a.test {
     color: #000000;
+     text-decoration: none;
 }
-
+a.test:hover {
+   
+    text-decoration: underline;
+    
+}
 .romb_norv {
     position: relative;
     width: 180px;
@@ -112,13 +129,28 @@ a {
     transform: rotate(45deg);
     background-color: #BACBDC;
     border: 3px solid #000000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 175px;
+    left: 350px;
 
+}
+.romb_norv_flex {
+    width: 180px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    transform: rotate(-45deg);
 }
 .text_yaziki_romb {
     position: absolute;
 
     transform: rotate(-45deg);
-    font-family: Ubuntu;
+    font-family: 'Ubuntu', sans-serif;
 font-style: normal;
 font-weight: normal;
 line-height: normal;
@@ -129,6 +161,26 @@ margin-top: 25px;
     margin-left: 25px;
 
 color: #FFFFFF;
+}
+
+.text_norv_kub {
+    font-family: 'Ubuntu', sans-serif;
+font-style: normal;
+font-weight: normal;
+line-height: normal;
+font-size: 18px;
+text-transform: uppercase;
+margin-top: 15px;
+}
+
+.text_norv_kub_2 {
+    font-family: 'Ubuntu', sans-serif;
+font-style: normal;
+font-weight: normal;
+line-height: normal;
+font-size: 14px;
+text-align: center;
+margin-top: 15px;
 }
 .romb_islan {
     position: relative;
@@ -141,7 +193,7 @@ color: #FFFFFF;
     justify-content: center;
     align-items: center;
     left: 500px;
-    top: -100px;
+    top: -150px;
 }
 .foto_islan {
     position: relative;
@@ -159,7 +211,7 @@ color: #FFFFFF;
     justify-content: center;
     align-items: center;
     left: 650px;
-    top: -100px;
+    top: -185px;
 }
 .foto_shved {
     position: relative;
@@ -176,7 +228,7 @@ color: #FFFFFF;
     justify-content: center;
     align-items: center;
     left: 800px;
-    top: -465px;
+    top: -510px;
 }
 .foto_fin {
     position: relative;
@@ -192,16 +244,16 @@ color: #FFFFFF;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    left: 1150px;
-    top: -650px;
+    left: 1100px;
+    top: -690px;
 }
 .foto_dat {
     position: relative;
     transform: rotate(-45deg);
 }
 .romb_bordo {
-    top: 200px;
-    left: 700px;
+    top: 225px;
+    left: 715px;
     position: absolute;
     width: 47px;
     height: 47px;
@@ -209,7 +261,7 @@ color: #FFFFFF;
     background-color: #432132;
 }
 .romb_setyi {
-    top: 200px;
+    top: 185px;
     left: 1000px;
     position: absolute;
     width: 80px;
@@ -222,6 +274,8 @@ color: #FFFFFF;
     height: 37px;
     transform: rotate(0deg);
     background-color: white;
+    margin-top: -1px;
+    margin-left: -1px;
 }
 .romb_siniy {
     width: 27px;
@@ -232,18 +286,28 @@ color: #FFFFFF;
 .container_yrovni {
     width: 100%;
     max-width: 1510px;
-    background-color: magenta;
+    height: 850px;
+  width: 100%;  
+    max-width: 1510px;  
+    min-height: 850px;
+    height: 1px;
+    background-image: url(../img/img_foto_gradient_foto.png);
+    
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .tex_yrovni {
     font-family: 'Ubuntu', sans-serif;
-font-style: normal;
-font-weight: normal;
-line-height: normal;
-font-size: 14px;
-text-align: center;
-text-transform: uppercase;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 24px;
+    text-align: center;
+    text-transform: uppercase;
 color: #000000;
 padding: 20px;
+position: relative;
+top: 250px;
 
 }
 .flex_yrovni {
@@ -251,6 +315,8 @@ padding: 20px;
     flex-wrap: wrap;
     justify-content: center;
     align-content: space-between;
+    top: 250px;
+    position: relative;
 
 }
 .yrovni {
@@ -282,12 +348,22 @@ margin-bottom: 20px;
 font-style: normal;
 font-weight: normal;
 line-height: normal;
-font-size: 18px;
+font-size: 24px;
 text-align: center;
 text-transform: uppercase;
 color: white;
 padding: 20px;
 }
+.tex_raspisanie2 {
+    font-family: 'Ubuntu', sans-serif;
+font-style: normal;
+font-weight: normal;
+line-height: normal;
+font-size: 14px;
+text-align: center;
+color: white;
+}
+
 .flex_raspisanie {
     display: flex;
     flex-wrap: wrap;
