--- a/css/style_css_2.css
+++ b/css/style_css_2.css
@@ -327,15 +327,40 @@ width: 450px;
 height: 180px;
 background-color: rgba(0, 0, 0, 0.5);
 color: white;
-font-family: 'Ubuntu', sans-serif;
-font-style: normal;
-font-weight: normal;
-line-height: normal;
-font-size: 14px;
 margin-left: 10px;
 margin-right: 10px;
 margin-top: 20px;
 margin-bottom: 20px;
+}
+.znachki {
+    margin: 10px;
+}
+.flex_yrovni_text {
+    width: 350px;
+    height: 170px;
+    margin-top: 5px;
+    margin-left: 5px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+.text_yrovni_vubor {
+    font-family: 'Ubuntu', sans-serif;
+font-style: normal;
+font-weight: normal;
+line-height: normal;
+font-size: 18px;
+text-transform: uppercase;
+margin: 10px;
+}
+.text_yrovni_vubor2 {
+    font-family: 'Ubuntu', sans-serif;
+    font-style: normal;
+font-weight: 300;
+line-height: normal;
+font-size: 14px;
+margin: 10px;
 }
 .container_raspisanie {
     width: 100%;
@@ -396,20 +421,38 @@ margin-bottom: 30px;
 color: white;
 }
 .footer {
+    position: relative;
     width: 100%;
     max-width: 1510px;
     max-height: 373px;
     height: 373px;
     background-color: #778798;
+    color: white;
+    font-family: 'Ubuntu', sans-serif;
+font-style: normal;
+font-weight: normal;
+line-height: 25px;
+font-size: 18px;
  }
  
 .romb_footer {
+    position: absolute;
+    left: -100px;
+    top: 125px;
     width: 197px;
     height: 197px;
     transform: rotate(45deg);
     background-color: #BA9898;
 } 
-
+.flex_text_footer {
+    display: flex;
+    color: white;
+    font-family: 'Ubuntu', sans-serif;
+font-style: normal;
+font-weight: normal;
+line-height: 25px;
+font-size: 18px;
+}
  
 
 @media (max-width: 1600px) and (min-width: 1450px) {
